hphp/hack/test/typecheck/use_namespace.php.exp
File "use_namespace.php", line 16, characters 9-12:
Unbound name: derp (an object type) (Naming[2049])
